# -deprecated-vrf-cpi-example

./: .eslintrc.json  .gitignore  Anchor.toml  Cargo.toml  README.md  docker-compose.yml  package-lock.json  package.json  solita.ts  tsconfig.json
programs/anchor-example/: Cargo.toml
programs/anchor-example/src/: lib.rs
programs/anchor-example/src/actions/: init_state.rs  mod.rs  request_result.rs  update_result.rs
programs/anchor-vrf-example/src/: lib.rs
programs/anchor-vrf-example/src/actions/: update_result.rs
programs/solana-program/: Cargo.toml
programs/solana-program/src/: lib.rs
src/: api.ts  const.ts  index.ts  types.ts
src/actions/: benchmark.ts  cpi.ts  create.ts  index.ts  request.ts  sandbox.ts  setup.ts  test.ts  update.ts  verify.ts  watch.ts
src/utils/: anchor.ts  console.ts  index.ts  keypair.ts  sleep.ts  switchboard.ts
tests/: vrc-cpi.test.ts
